--- a/app/src/main/res/layout/activity_order.xml
+++ b/app/src/main/res/layout/activity_order.xml
@@ -5,11 +5,25 @@
     android:orientation="vertical">
 
     <TextView
+        android:id="@+id/titleName"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:background="@color/colorPrimary"
+        android:gravity="center"
+        android:text="生成订单"
+        android:textColor="@android:color/background_light"
+        android:textSize="20sp" />
+
+    <TextView
         android:id="@+id/startTime"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@id/titleName"
         android:layout_marginTop="50dp"
-        android:hint="请选择开始时间"
+        android:layout_marginLeft="50dp"
+        android:hint="选择开始时间"
+        android:textColor="#000000"
+        android:textColorHint="#000000"
         android:textSize="20dp" />
 
     <TextView
@@ -18,7 +32,55 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/startTime"
         android:layout_marginTop="50dp"
-        android:hint="请选择结束时间"
+        android:layout_marginLeft="50dp"
+        android:hint="选择结束时间"
+        android:textColor="#000000"
+        android:textColorHint="#000000"
         android:textSize="20dp" />
+
+    <TextView
+        android:id="@+id/totalPrice"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/endTime"
+        android:layout_marginTop="50dp"
+        android:layout_marginLeft="50dp"
+        android:text="总价："
+        android:textColor="#000000"
+        android:textColorHint="#000000"
+        android:textSize="20dp" />
+
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:orientation="horizontal"
+        android:layout_alignParentBottom="true">
+
+        <Button
+            android:id="@+id/btnOk"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="确定"
+            android:textSize="20sp"
+            android:textColor="@android:color/background_light"
+            android:background="@color/colorPrimary"
+            android:layout_weight="1"
+            android:layout_marginRight="0.5dp"
+            android:layout_marginLeft="0.5dp"/>
+
+        <Button
+            android:id="@+id/btnCancel"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="取消"
+            android:textSize="20sp"
+            android:textColor="@android:color/background_light"
+            android:background="@color/colorPrimary"
+            android:layout_weight="1"
+            android:layout_marginRight="0.5dp"
+            android:layout_marginLeft="0.5dp" />
+
+    </LinearLayout >
 
 </RelativeLayout>
