--- a/app/src/main/res/layout/activity_house.xml
+++ b/app/src/main/res/layout/activity_house.xml
@@ -6,17 +6,40 @@
     android:orientation="vertical"
     tools:context="com.findhouse.activity.HouseActivity">
 
-    <com.youth.banner.Banner
-        android:id="@+id/banner"
+    <LinearLayout
+        android:id="@+id/titleLayout"
         android:layout_width="match_parent"
-        android:layout_marginTop="00dp"
-        android:layout_height="250dp" />
+        android:layout_height="60dp"
+        android:background="@color/colorPrimary"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/titleName"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="50dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="房源信息"
+            android:textColor="@android:color/background_light"
+            android:textSize="20sp" />
+
+        <Button
+            android:id="@+id/btnStar"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_weight="0"
+            android:layout_gravity="center"
+            android:background="@drawable/unstar"/>
+
+    </LinearLayout>
 
     <ScrollView
         android:id="@+id/scrollView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/banner"
+        android:layout_below="@id/titleLayout"
         android:layout_above="@id/linearLayout"
         android:fillViewport="true">
 
@@ -26,12 +49,19 @@
             android:layout_height="wrap_content"
             android:orientation="vertical" >
 
+            <com.youth.banner.Banner
+                android:id="@+id/banner"
+                android:layout_width="match_parent"
+                android:layout_marginTop="00dp"
+                android:layout_height="250dp" />
+
             <TextView
                 android:id="@+id/houseTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="20dp"
+                android:layout_below="@id/banner"
                 android:textColor="#000000"
                 android:textSize="20sp" />
 
